--- a/components/weather.marko
+++ b/components/weather.marko
@@ -1,4 +1,4 @@
-import axios from 'axios';
+﻿import axios from 'axios';
 
 class {
     onCreate() {
@@ -33,7 +33,7 @@ class {
     }
 
     buildURL(cityName) {
-        let apiKey = '';
+        let apiKey = '6f49e4f6bef37c3172dac3cae65a0ae6';
         return 'https://api.openweathermap.org/data/2.5/weather?q=' + cityName + '&units=metric&appid=' + apiKey;
     }
 
